--- a/index.html
+++ b/index.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
+<!--[if lte IE 6]><html class="preIE7 preIE8 preIE9"><![endif]-->
+<!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
+<!--[if IE 8]><html class="preIE9"><![endif]-->
+<!--[if gte IE 9]><!-->
+<html>
+<!--<![endif]-->
 
-<html class="no-js">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
     <title>Aaron Snowden</title>
-    <meta content="" name="description">
-    <meta content="width=device-width, initial-scale=1, user-scalable=no" name=
-    "viewport">
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,900'
-    rel='stylesheet' type='text/css'>
-    <link href=
-    "//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
-    rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
-    <link href="http://bit.ly/1YxMvG6" rel="shortcut icon">
+    <link href='//fonts.googleapis.com/css?family=font1|font2|etc' rel=
+    'stylesheet' type='text/css'>
+    <link href="css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    <i class="wrap"></i>
+    <div id="sky">
+        Aaron Snowden<br>
+        <img height="85px" src=
+        "https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/07/07d3fe12d8fd4ae6abdb2bbac84bce521c90f6a6_full.jpg"
+        width="95px"><br>
+        Minecraft Player
+    </div>
 
-    <div class="main">
-        <img alt="" class="me" src=
-        "https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/07/07d3fe12d8fd4ae6abdb2bbac84bce521c90f6a6_full.jpg">
+    <div id="mid">
+        <img height="100" src=
+        "http://orig06.deviantart.net/29c8/f/2014/028/0/2/render_iceburg2_by_victycoon-d744boj.png"
+        width="100">Currently playing on: <a href=
+        "http://minecraftservers.org/server/88483" target="_blank"><img alt=
+        "Arkham Network Minecraft server" height="95" src=
+        "http://status.minecraftservers.org/classic/88483.png" width="440"></a>
+    </div>
 
-        <h1>Aaron Snowden</h1>
-
-        <div class="social">
-            <a class="fa fa-steam-square" href=
-            "https://steamcommunity.com/id/codes4koolaid" style=
-            "font-style: italic" title="SteamProf"></a>
-        </div>
-
-        <div class="links"></div>
-    </div><script src="js/vendor/jquery-1.11.0.min.js"></script>
+    <div id="bottom-dirt"></div>
 </body>
 </html>
